--- a/mathquilled2.html
+++ b/mathquilled2.html
@@ -189,7 +189,7 @@
   <span class="mq-sub">
     <var>a</var>
   </span>
-  <span style="display:inline-block;width:0"></span>
+  <span style="display:inline-block;width:0">&#8203;</span>
 </span>
 </span>
 </td>
@@ -214,14 +214,7 @@
 
 <td class="mqeebtn" btntext="\\lim_{x \rarr a}" btntype="latex">
 <span class="mq-math-mode">
-<var class="mq-operator-name">lim</var>
-<span class="mq-supsub mq-non-leaf">
-  <span class="mq-sub">
-    <var>x</var>
-    <span>&rarr;</span>
-    <var>a</var>
-  </span>
-</span>
+<var class="mq-operator-name">lim</var><span class="mq-supsub mq-non-leaf"><span class="mq-sub"><var>x</var><span>&rarr;</span><var>a</var></span><span style="display:inline-block;width:0">&#8203;</span></span>
 </span>
 </td>
 
