Update mathquill version used

--- a/mathquilled2.html
+++ b/mathquilled2.html
@@ -14,7 +14,7 @@
 	<li><a href="#tabs-sets">&le;</a></li>
 	<li><a href="#tabs-symbols">&infin;</a></li>
 	<li><a href="#tabs-acc">
-	<span class="mq-math-mode" style="cursor: pointer;"><span class="mq-non-leaf"><span class="mq-vector-prefix">&rarr;</span><span class="mq-vector-stem" style="text-align:center"><span class="emptybox">&nbsp;</span></span></span></span>
+	<span class="mq-math-mode" style="cursor: pointer;"><span class="mq-math-mode"><span class="mq-non-leaf"><span class="mq-diacritic-above">&rarr;</span><span class="mq-diacritic-stem"><span class="emptybox">&nbsp;</span></span></span></span></span>
 	</a></li>
 	<li><a href="#tabs-calc">&int;</a></li>
 	<li><a href="#tabs-greek">&theta;</a></li>
@@ -163,7 +163,7 @@
 <tr>
 
 <td class="mqeebtn" btntext="\\vec" btntype="sfunc">
-<span class="mq-math-mode"><span class="mq-non-leaf"><span class="mq-vector-prefix">&rarr;</span><span class="mq-vector-stem"><span class="emptybox">&nbsp;</span></span></span></span>
+<span class="mq-math-mode"><span class="mq-non-leaf"><span class="mq-diacritic-above">&rarr;</span><span class="mq-diacritic-stem"><span class="emptybox">&nbsp;</span></span></span></span>
 </td>
 <td class="mqeebtn" btntext="\\bar" btntype="sfunc">
 <span class="mq-math-mode"><span class="mq-non-leaf mq-overline"><span class="emptybox">&nbsp;</span></span></span>
@@ -182,16 +182,17 @@
 <span class="mq-math-mode"><big>&int;</big></span>
 </td>
 <td class="mqeebtn" btntext="\\int_a^b" btntype="latex">
-<span class="mq-math-mode"><big>&int;</big><span class="mq-supsub mq-non-leaf mq-limit">
-  <span class="mq-sup">
-    <var>b</var>
+<span class="mq-math-mode">
+<span class="mq-int mq-non-leaf">
+  <big>&int;</big>
+  <span class="mq-supsub mq-non-leaf">
+    <span class="mq-sup"><span class="mq-sup-inner"><var>b</var></span></span>
+    <span class="mq-sub"><var>a</var></span>
+    <span style="display:inline-block;width:0">&#8203;</span>
   </span>
-  <span class="mq-sub">
-    <var>a</var>
-  </span>
-  <span style="display:inline-block;width:0">&#8203;</span>
 </span>
 </span>
+
 </td>
 <td class="mqeebtn" btntext="\\sum_a^b" btntype="latex">
 <span class="mq-math-mode">
