Add css to prevent auto-zoom on iOS

--- a/new/demo1.html
+++ b/new/demo1.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" type="text/css" href="mqeditor.css" />
   <script type="text/javascript" src="mqeditor.js"></script>
   <script type="text/javascript" src="demo1.js"></script>
+  <style>
+    @supports (-webkit-overflow-scrolling: touch) {
+      input[type=text] {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
   <p>Input box 1: <input type="text" id="in1" /></p>
