--- a/new/demo1.html
+++ b/new/demo1.html
@@ -19,8 +19,13 @@
   </style>
 </head>
 <body>
-  <p>Input box 1: <input type="text" id="in1" /></p>
-  <p>&nbsp;</p>
-  <p>Input box 2: <input type="text" id="in2" /></p>
+  <p>Basic: <input type="text" id="in1" data-mq="calculated" /></p>
+  <p>Fraction: <input type="text" id="in2" data-mq="calculated,fraction" /></p>
+  <p>Matrix: <input type="text" id="in3" data-mq="calcmatrix" /></p>
+  <p>Interval: <input type="text" id="in4" data-mq="calcinterval" /></p>
+  <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" /></p>
+  <p>Vector: <input type="text" id="in6" data-mq="calcntuple,vector" /></p>
+  <p>Equation: <input type="text" id="in7" data-mq="numfunc,equation" data-mq-vars="x,y" /></p>
+  <p>More vars: <input type="text" id="in8" data-mq="numfunc" data-mq-vars="x,y,theta,p_0" /></p>
 </body>
 </html>
