--- a/new/demo1.html
+++ b/new/demo1.html
@@ -26,6 +26,6 @@
   <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" /></p>
   <p>Vector: <input type="text" id="in6" data-mq="calcntuple,vector" /></p>
   <p>Equation: <input type="text" id="in7" data-mq="numfunc,equation" data-mq-vars="x,y" /></p>
-  <p>More vars: <input type="text" id="in8" data-mq="numfunc" data-mq-vars="x,y,theta,p_0" /></p>
+  <p>More vars: <input type="text" id="in8" data-mq="numfunc" data-mq-vars="x,y,theta,p_0,mu_1" /></p>
 </body>
 </html>
