Build tabpanel view. Needs refactoring.

--- a/new/demo1.html
+++ b/new/demo1.html
@@ -23,7 +23,7 @@
   <p>Fraction: <input type="text" id="in2" data-mq="calculated,fraction" /></p>
   <p>Matrix: <input type="text" id="in3" data-mq="calcmatrix" /></p>
   <p>Interval: <input type="text" id="in4" data-mq="calcinterval" /></p>
-  <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" /></p>
+  <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" data-mq-vars="x"/></p>
   <p>Vector: <input type="text" id="in6" data-mq="calcntuple,vector" /></p>
   <p>Equation: <input type="text" id="in7" data-mq="numfunc,equation" data-mq-vars="x,y" /></p>
   <p>More vars: <input type="text" id="in8" data-mq="numfunc" data-mq-vars="x,y,theta,p_0,mu_1" /></p>
