--- a/new/demo1.html
+++ b/new/demo1.html
@@ -16,11 +16,21 @@
         font-size: 16px;
       }
     }
+    .mqed-tipholder {
+      margin-top: -38px;
+      padding: 4px;
+      min-height: 34px;
+      font-size: 80%;
+      background-color: #eef;
+      border-top-right-radius: 4px;
+    }
+
   </style>
 </head>
 <body>
-  <p>Basic: <input type="text" id="in1" data-mq="calculated" /></p>
-  <p>Fraction: <input type="text" id="in2" data-mq="calculated,fraction" /></p>
+  <p>Basic: <input type="text" id="in1" data-mq="calculated"/></p>
+  <p>List: <input type="text" id="in9" data-mq="calculated,list" data-tip="Enter a list of mathematical expressions"/></p>
+  <p>Fraction: <input type="text" id="in2" data-mq="calculated,fraction"/></p>
   <p>Matrix: <input type="text" id="in3" data-mq="calcmatrix" /></p>
   <p>Interval: <input type="text" id="in4" data-mq="calcinterval" /></p>
   <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" data-mq-vars="x"/></p>
