Bug fix set, spacebar

--- a/new/demo1.html
+++ b/new/demo1.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script type="text/javascript" src="../support/jquery.min.js"></script>
-  <script type="text/javascript" src="../mathquill.js"></script>
+  <script type="text/javascript" src="../mathquill.js?v=042819"></script>
   <link rel="stylesheet" type="text/css" href="../mathquill.css" />
   <link rel="stylesheet" type="text/css" href="mqeditor.css" />
   <script type="text/javascript" src="mqeditor.js"></script>
@@ -35,6 +35,7 @@
   <p>Interval: <input type="text" id="in4" data-mq="calcinterval" /></p>
   <p>Ineq: <input type="text" id="in5" data-mq="calcinterval,inequality" data-mq-vars="x"/></p>
   <p>Vector: <input type="text" id="in6" data-mq="calcntuple,vector" /></p>
+  <p>Set: <input type="text" id="in10" data-mq="calculated,set" /></p>
   <p>Equation: <input type="text" id="in7" data-mq="numfunc,equation" data-mq-vars="x,y" /></p>
   <p>More vars: <input type="text" id="in8" data-mq="numfunc" data-mq-vars="x,y,theta,p_0,mu_1" /></p>
 </body>
